--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
 					<h3 class="title" th:text="#{login.title}"></h3>
 					<p class="subtitle" th:text="#{login.subtitle}"></p>
 
-					<div class="box no-shadow" style="padding: 0px; margin-bottom: 0px;">
+					<div th:if="${localLoginEnabled}" class="box no-shadow" style="padding: 0px; margin-bottom: 0px;">
 						<header class="card-header collapsible-header no-shadow">
 							<a href="#collapsible-card" data-action="collapse" id="email-auth"
 								class="card-header-icon is-hidden-fullscreen full-width button is-rounded"
