--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -68,7 +68,7 @@
 												th:text="#{login.remember}"></span>
 										</label>
 									</div>
-									<button class="button colored is-link" th:text="#{submit}"></button>
+									<button class="button colored is-link" th:text="#{submit}" id="send_login"></button>
 								</form>
 							</div>
 						</div>
