--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
 					<h3 class="title" th:text="#{login.title}"></h3>
 					<p class="subtitle" th:text="#{login.subtitle}"></p>
 
-					<div class="box no-shadow" style="padding: 0px; margin-bottom: 0px;">
+					<div th:if="${localLoginEnabled}" class="box no-shadow" style="padding: 0px; margin-bottom: 0px;">
 						<header class="card-header collapsible-header no-shadow">
 							<a href="#collapsible-card" data-action="collapse" id="email-auth"
 								class="card-header-icon is-hidden-fullscreen full-width button is-rounded"
@@ -75,17 +75,26 @@
 					<div class="container" style="margin-bottom: 24px;" dir="ltr" id="oauth-div">
 						<div class="box no-shadow">
 							<div class="columns">
-								<button class="button colored"
+								<button th:if="${googleEnabled}" class="button colored"
 									id="google-auth"
 									onclick="window.location='/oauth2/authorization/google'">
 									<img src="/img/g-icon.svg" style="height: 32px;"><span
 										style="padding-left: 6px; color: white;" th:text="#{login.oauth.google}"></span>
 								</button>
-								<button class="button colored" id="facebook-auth"
+								<button th:if="${facebookEnabled}" class="button colored" id="facebook-auth"
 									onclick="window.location='/oauth2/authorization/facebook'">
 									<img src="/img/f-icon.svg" style="height: 32px;"><span
 										style="padding-left: 6px; color: white;"
 										th:text="#{login.oauth.facebook}"></span>
+								</button>
+								<button th:if="${keycloakEnabled}" class="button colored" id="keycloak-auth"
+										onclick="window.location='/oauth2/authorization/keycloak'">
+									<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
+										<!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+										<path d="M271.5 432l-68 32C88.5 453.7 0 392.5 0 318.2c0-71.5 82.5-131 191.7-144.3v43c-71.5 12.5-124 53-124 101.3 0 51 58.5 93.3 135.7 103v-340l68-33.2v384zM448 291l-131.3-28.5 36.8-20.7c-19.5-11.5-43.5-20-70-24.8v-43c46.2 5.5 87.7 19.5 120.3 39.3l35-19.8L448 291z"/>
+									</svg>
+									<span style="padding-left: 6px; color: white;" th:text="#{login.oauth.keycloak}">
+									</span>
 								</button>
 							</div>
 						</div>
