--- a/src/main/resources/templates/delete-account.html
+++ b/src/main/resources/templates/delete-account.html
@@ -26,7 +26,7 @@
     <div class="loader" id="preloader"></div>
 </div>
 <div id="main-logged-in">
-    <header th:insert="~{fragments.html::header-logged-in}"></header>
+    <header th:insert="~{fragments.html::header}"></header>
 
     <div class="section">
         <div class="container">
