--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -21,7 +21,7 @@
 
 <body>
 	<div id="main">
-		<header th:insert="~{fragments.html::header-logged-out}"></header>
+		<header th:insert="~{fragments.html::header}"></header>
 		<div class="section" id="main-section">
 			<div class="container">
 				<div id="donation-links">
