--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -29,7 +29,7 @@
     <div class="loader" id="preloader"></div>
 </div>
 <div id="main-logged-in">
-    <header th:insert="~{fragments.html::header-donate}"></header>
+    <header th:insert="~{fragments.html::header}"></header>
     <div id="donate-top-margin"></div>
     <section class="container" id="main-container" style="margin-bottom: 52px;"></section>
 </div>
