--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -20,7 +20,7 @@
 <body>
 	<div id="main">
 
-		<header th:insert="~{fragments.html::header-logged-out}"></header>
+		<header th:insert="~{fragments.html::header}"></header>
 		<div class="section">
 			<div class="box" id="privacy">
 				<p class="title is-4" th:text="#{faq.privacy.question}"></p>
