--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
 		<div class="loader" id="preloader"></div>
 	</div>
 	<div id="main">
-		<header th:replace="~{fragments.html::header-index}"></header>
+		<header th:insert="~{fragments.html::header}"></header>
 		<div id="hero-gravity"></div>
 		
 		<section id="hero">
