--- a/src/main/resources/templates/privacy.html
+++ b/src/main/resources/templates/privacy.html
@@ -20,7 +20,7 @@
 <body>
 	<div id="main">
 
-		<header th:insert="~{fragments.html::header-logged-out}"></header>
+		<header th:insert="~{fragments.html::header}"></header>
 		<div class="section">
 			<div class="box" th:utext="${content}">
 			</div>
