--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -21,7 +21,7 @@
 
 <body>
 <div id="main">
-    <header th:insert="~{fragments.html::header-logged-in}"></header>
+    <header th:insert="~{fragments.html::header}"></header>
     <div style="padding-top: 4px;"></div>
     <div class="box" id="contact" style="max-height: 330px; overflow: auto;">
         <h3 th:text="#{contact}"></h3>
