--- a/src/main/resources/templates/disliked-users.html
+++ b/src/main/resources/templates/disliked-users.html
@@ -29,7 +29,7 @@
     <div class="loader" id="preloader"></div>
 </div>
 <div id="main-logged-in">
-    <header th:insert="~{fragments.html::header-logged-in}"></header>
+    <header th:insert="~{fragments.html::header}"></header>
     <section class="container" id="main-container">
         <div class="section">
             <div class="container container-narrow" style="width: 100%;">
