--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -21,7 +21,7 @@
 <body>
 	<div id="main">
 
-		<header th:insert="~{fragments.html::header-logged-out}"></header>
+		<header th:insert="~{fragments.html::header}"></header>
 		<div class="section">
 			<div class="box">
 				<h2 th:text="#{email} + ':'"></h2>
