[284][WIP][FEATURE] Use alovoa-expo as official frontend for the web

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -109,7 +109,7 @@
     </div>
 
     <div class="box" id="links">
-        <a href="/search">Search</a>
+        <a href="/admin-search">Search</a>
         <a href="/admin-verification">Verification</a>
     </div>
 
