--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -150,42 +150,66 @@
     </script>
 </footer>
 
-<div th:fragment="navigation" class="center-parent">
-    <nav class="navbar is-link is-fixed-bottom" role="navigation" style="display: block;">
-        <div class="navbar-brand">
-            <a class="button is-inverted is-primary navigation-item" href="/profile" id="nav-profile">
-                <div>
-                    <i class="fa fa-user"></i><span th:text="#{profile}" class="navigation-item-span-right"></span>
+<div th:fragment="search-users" class="user-search-div">
+
+    <div th:if="${#lists.isEmpty(dto.users)}"
+         style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; padding-top: 12px;">
+        <span th:text="#{no-users-found}"></span>
+    </div>
+
+    <div th:if="${dto.message != null}" id="search-message" th:text="${dto.message}" style="display: none;"></div>
+
+
+    <th:block th:each="user : ${dto.users}">
+        <div class="user-search-card" th:id="${user.idEncoded}">
+            <div class="swiper swiper-container" th:id="${user.idEncoded}">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide colored"
+                         style="background-color: #48c774; display: flex; align-items: center; justify-content: center">
+                        <i class="fa fa-thumbs-up fa-10x"></i>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card is-horizontal" style="width: 100%; height: 100%;">
+                            <div class="card-image" th:onclick="viewProfile([[${user.idEncoded}]])">
+                                <figure class="image">
+                                    <img th:src="${user.profilePicture}" class="profile-pic">
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div th:onclick="viewProfile([[${user.idEncoded}]])">
+                                    <div class="content-background">
+                                        <div class="content">
+
+                                            <div style="display: flex;">
+                                                <div class="full-width" dir="ltr">
+                                                    <div class="left first-name" style="font-size: 2em"
+                                                         th:text="${user.firstName}"
+                                                         th:classappend="${user.gender.text == 'male' ? 'male' : user.gender.text == 'female' ? 'female' : 'other'}">
+                                                    </div>
+                                                    <div class="left"
+                                                         style="font-size: 1.5em; padding-top: 6px; display: flex; gap: 4px;">
+                                                        <div><span>,&nbsp;</span><span th:text="${user.age}"></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div style="font-size: 1.1em;" class="description"
+                                                 th:text="${user.description}"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide colored"
+                         style="background-color: #f14668; display: flex; align-items: center; justify-content: center;">
+                        <i class="fa fa-thumbs-down fa-10x"></i>
+                    </div>
                 </div>
-                <span th:text="#{profile}" class="navigation-item-span-bottom"></span>
-            </a>
-            <a class="button is-inverted is-primary navigation-item" id="nav-chats" href="/chats">
-                <div>
-                    <i class="fa fa-comments"></i><span th:text="#{chats}"
-                                                        class="navigation-item-span-right"></span>
-                </div>
-                <span th:text="#{chats}" class="navigation-item-span-bottom"></span>
-            </a>
-            <a class="button is-inverted is-primary navigation-item" href="/search" id="nav-search">
-                <div>
-                    <i class="fa fa-search"></i><span th:text="#{search}" class="navigation-item-span-right"></span>
-                </div>
-                <span th:text="#{search}" class="navigation-item-span-bottom"></span>
-            </a>
-            <a class="button is-inverted is-primary navigation-item" id="nav-alerts" href="/alerts">
-                <div>
-                    <i class="fa fa-bell"></i><span th:text="#{alerts}" class="navigation-item-span-right"></span>
-                </div>
-                <span th:text="#{alerts}" class="navigation-item-span-bottom"></span>
-            </a>
-            <a class="button is-inverted is-primary navigation-item" href="/donate" id="nav-donate">
-                <div>
-                    <i class="fa fa-coins"></i><span th:text="#{donate}" class="navigation-item-span-right"></span>
-                </div>
-                <span th:text="#{donate}" class="navigation-item-span-bottom"></span>
-            </a>
+            </div>
         </div>
-    </nav>
+    </th:block>
 </div>
 
 </body>
