--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -80,7 +80,7 @@
                     </a>
                     <a href="https://www.reddit.com/r/Alovoa/"><img src="/img/r-icon.svg" style="height: 20px;"
                                                                     alt="reddit"></a>
-                    <a href="https://bsky.app/profile/alovoa.bsky.social"><img src="/img/bs-icon.svg" style="height: 20px;"
+                    <a href="https://bsky.app/profile/alovoa.com"><img src="/img/bs-icon.svg" style="height: 20px;"
                                                                    alt="bluesky"></a>
                     <a href="https://mastodon.social/@alovoa_love"><img src="/img/m-icon.svg" style="height: 20px;"
                                                                         alt="mastodon"></a>
