--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -87,6 +87,15 @@
         </form>
     </div>
 
+    <div class="box" id="user-delete-invalid">
+        <h3>Delete invalid users</h3>
+        <form id="user-delete-invalid-form" method="POST" enctype="multipart/form-data" th:action="@{/admin/delete-invalid-users}">
+            <input class="input" id="user-delete-invalid-file" name="file" type="file" required placeholder="UUID file">
+            <div style="padding-top: 4px;"></div>
+            <button class="button" th:text="#{submit}"></button>
+        </form>
+    </div>
+
     <div class="box" id="donation-add">
         <h3>Add donation</h3>
         <form id="donation-add-form" method="POST" th:action="@{/admin/donation/add/}">
