--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -89,9 +89,7 @@
 
     <div class="box" id="user-delete-invalid">
         <h3>Delete invalid users</h3>
-        <form id="user-delete-invalid-form" method="POST" enctype="multipart/form-data" th:action="@{/admin/delete-invalid-users}">
-            <input class="input" id="user-delete-invalid-file" name="file" type="file" required placeholder="UUID file">
-            <div style="padding-top: 4px;"></div>
+        <form id="user-delete-invalid-form" method="POST" th:action="@{/admin/delete-invalid-users}">
             <button class="button" th:text="#{submit}"></button>
         </form>
     </div>
